force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/ffrr__RevenueRecognitionTransactionLine__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffrr__helprevrectransactionline</customHelpPage>
    <description>Contains the line details of recognition transactions.</description>
    <label>Recognition Transaction Line</label>
    <nameField>
        <displayFormat>RTL-{00000000}</displayFormat>
        <label>Transaction Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recognition Transaction Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>