force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/ffrrExpense__c.field-meta.xml
<CustomField>
    <fullName>ffrrExpense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense</label>
    <referenceTo>pse__Expense__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>