force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/ffrrMiscellaneousAdjustment__c.field-meta.xml
<CustomField>
    <fullName>ffrrMiscellaneousAdjustment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Miscellaneous Adjustment</label>
    <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>