force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/ffrrProject__c.field-meta.xml
<CustomField>
    <fullName>ffrrProject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>