force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/ffrrSalesCreditNote__c.field-meta.xml
<CustomField>
    <fullName>ffrrSalesCreditNote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Credit Note</label>
    <referenceTo>c2g__codaCreditNote__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>