force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/ffrrSalesCreditNoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>ffrrSalesCreditNoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Credit Note Line Item</label>
    <referenceTo>c2g__codaCreditNoteLineItem__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>