force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/ffrrSalesInvoice__c.field-meta.xml
<CustomField>
    <fullName>ffrrSalesInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Invoice</label>
    <referenceTo>c2g__codaInvoice__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>