force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/ffrrTimecard__c.field-meta.xml
<CustomField>
    <fullName>ffrrTimecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timecard Split</label>
    <referenceTo>pse__Timecard__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>