force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/link_CostJournal_errors__c.field-meta.xml
<CustomField>
    <fullName>link_CostJournal_errors__c</fullName>
    <description>Errors that occurred when creating the journal line by the RT to Journal Integration for Cost.</description>
    <inlineHelpText>Errors that occurred when creating the journal line by the RT to Journal Integration for Cost.</inlineHelpText>
    <label>Cost Journal Line Creation Error</label>
    <type>TextArea</type>
</CustomField>