force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/link_CostJournal_id__c.field-meta.xml
<CustomField>
    <fullName>link_CostJournal_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Journal Line</label>
    <referenceTo>c2g__codaJournalLineItem__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines (Cost Journal Line)</relationshipLabel>
    <relationshipName>RevRecTransactionLinesForCost</relationshipName>
    <type>Lookup</type>
</CustomField>