force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/link_CostJournal_state__c.field-meta.xml
<CustomField>
    <fullName>link_CostJournal_state__c</fullName>
    <description>Indicates whether the journal line was created successfully by the RT to Journal Integration for Cost.</description>
    <inlineHelpText>Indicates whether the journal line was created successfully by the RT to Journal Integration for Cost.</inlineHelpText>
    <label>Cost Journal Line Creation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>