force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/link_FFA_errors__c.field-meta.xml
<CustomField>
    <fullName>link_FFA_errors__c</fullName>
    <description>Errors that occurred when creating the journal line by the RT to journal Integration.</description>
    <inlineHelpText>Errors that occurred when creating the journal line by the RT to journal Integration.</inlineHelpText>
    <label>Journal Line Creation Error</label>
    <type>TextArea</type>
</CustomField>