force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/link_FFA_id__c.field-meta.xml
<CustomField>
    <fullName>link_FFA_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal Line</label>
    <referenceTo>c2g__codaJournalLineItem__c</referenceTo>
    <relationshipLabel>Recognition Transaction Lines (Journal Line)</relationshipLabel>
    <relationshipName>RevenueRecognitionTransactionLines</relationshipName>
    <type>Lookup</type>
</CustomField>