force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/fields/link_FFA_state__c.field-meta.xml
<CustomField>
    <fullName>link_FFA_state__c</fullName>
    <description>Indicates whether the journal line was created successfully by the RT to Journal Integration.</description>
    <inlineHelpText>Indicates whether the journal line was created successfully by the RT to Journal Integration.</inlineHelpText>
    <label>Journal Line Creation State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>