force-app/main/default/objects/ffrr__RevenueRecognitionTransactionLine__c/listViews/ffrr__All.listView-meta.xml
<ListView>
    <fullName>ffrr__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>